# mitcam

./: Cargo.toml
src/: main.rs
web/: index.html  script.js
