[package]
name = "mitcam"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
image = "0.25.9"
nokhwa = { version = "0.10.10", features = ["input-native"] }
softbuffer = "0.4.8"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.28.0"
winit = "0.30.12"
