[package]
name = "mitcam"
version = "0.1.0"
edition = "2024"

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures-util = "0.3.31"
image = "0.25.9"
nokhwa = { version = "0.10.10", features = ["input-native"] }
softbuffer = "0.4.8"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.28.0"
winit = "0.30.12"
headers = "0.4.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
